title sizing fix on mobile

--- a/components/navbar/Navbar.module.css
+++ b/components/navbar/Navbar.module.css
@@ -33,8 +33,10 @@
     text-decoration: none;
     color: white;
 }
-  
-.blogLink {
-    /* margin-right: 40px; */
+
+@media screen and (max-width: 400px) {
+    .navbar a {
+        margin: 5px 8px;
+    }
 }
   
